--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
                 <div class="aboutBanner__content">
                     <p>This you need to know</p>
-                    <h1>About Meeeeeeee</h1>
+                    <h1>About M</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia placeat quis dolorum optio doloremque minus hic est dicta veniam dolore eaque quisquam ab nostrum porro eos, dolor necessitatibus autem. Pariatur.
                     </p>
